# fastwindowswitcher

./: .gitignore  CMakeLists.txt  Changelog.md  README.md  create_x32_vs2015_sln.cmd  third_party.txt
fast_window_switcher_app/: CMakeLists.txt
fast_window_switcher_app/src/: HiddenEventWindow.cpp  HiddenEventWindow.hpp  HotKeyFunctions.cpp  HotKeyFunctions.hpp  MarkerWindow.cpp  MarkerWindow.hpp  MiniDumpFunctions.cpp  MiniDumpFunctions.hpp  MonitorInfo.hpp  PersistentSettings.hpp  PersistentSettingsFunctions.cpp  PersistentSettingsFunctions.hpp  Resources.qrc  RunGuard.cpp  RunGuard.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp  SettingsDialog.ui  SettingsFunctions.cpp  SettingsFunctions.hpp  SettingsWindow.cpp  SettingsWindow.hpp  TrayIcon.cpp  TrayIcon.hpp  VersionInfo.rc  WelcomeDialog.ui  WelcomeDialogFunctions.cpp  WelcomeDialogFunctions.hpp  XmlFunctions.cpp  XmlFunctions.hpp  main.cpp  resource.h
fast_window_switcher_lib/: CMakeLists.txt
fast_window_switcher_lib/src/: DesktopAbstraction.cpp  DesktopAbstraction.hpp  FastWindowSwitcher.cpp  FastWindowSwitcher.hpp  IDesktopAbstraction.hpp  MarkerFunctions.cpp  MarkerFunctions.hpp  MonitorFunctions.cpp  MonitorFunctions.hpp  MonitorInfo.hpp  PanelFunctions.cpp  PanelFunctions.hpp  SelectableElement.hpp  SelectableElementFunctions.cpp  SelectableElementFunctions.hpp  SelectableElementPtr.hpp  SelectableElementRepository.cpp  SelectableElementRepository.hpp  SelectableElementType.hpp  SelectablePanelElement.cpp  SelectablePanelElement.hpp  SelectablePanelElementFunctions.cpp  SelectablePanelElementFunctions.hpp  SelectableWindow.cpp  SelectableWindow.hpp  SelectableWindowFunctions.cpp  SelectableWindowFunctions.hpp  TaskbarPanel.hpp  UIAutomationFunctions.cpp  UIAutomationFunctions.hpp  UIControlViewWalker.cpp  UIControlViewWalker.hpp  UIElement.cpp  UIElement.hpp  WinApiFunctions.cpp  WinApiFunctions.hpp  WindowFunctions.cpp  WindowFunctions.hpp  optional.hpp
qt/: start_build_32_bit_debug_release.bat  start_build_32_bit_static_debug_release_2015.bat  start_build_32_bit_static_debug_release_2017.bat
